--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,17 +65,25 @@ a {
 
 .section {
 	width: 100%;
-	height: 500px;
+	height: 550px;
 	position: relative;
 }
  #name-section {
+ 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/steezy.jpg") no-repeat center center; 
+ /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
  }
   #major-section {
-   background-color: #8bb2af;
+   background-color: #5FCFE0;
   }
   #fact-section {
-  	background-color: #fff;
+  	background-color: #B595F7;
   }
   #fact-text {
   	color: black;
   }
+ .halfsection {
+ 	position: relative;
+}
