--- a/assets/css/cs_style.css
+++ b/assets/css/cs_style.css
@@ -12,9 +12,9 @@ body, html {
 }
 .text {
 	position: absolute;
-	font-size: 36px;
+	font-size: 30px;
 	color: white;
-	font-weight: 700;
+	font-weight: 500;
     top: 50%;
     left: 50%;
     -webkit-transform: translateX(-50%) translateY(-50%);
@@ -65,35 +65,39 @@ a {
 
 .section {
 	width: 100%;
-	height: 600px;
+	height: 400px;
 	position: relative;
 }
- #name-section {
- 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/steezy.jpg") no-repeat center center; 
+ #cs-intro-section {
+ 	height: 600px;
+ 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/Berkeley-Campinele.jpg") no-repeat center center; 
  /* -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;*/
  }
-  #major-section {
-   background-color: #5FCFE0;
+  #info-section {
+   background-color: #D6B376;
   }
-  #fact-section {
-  	background-color: #B595F7;
+  #exp-section {
+  	height: 500px;
+  	background-color: #ED6F6E;
   }
-  #links-section {
-  	height: 400px;
-  	background-color: #80F76E;
+  #projects-section {
+  	background-color: #6FCEF7;
   }
-  #links-text {
-  	top: 40%;
-  	color: white;
+  #contacts-section {
+  	height: 200px;
+  	background-color: #white;
+  }
+  #contacts-text {
+  	top: 35%;
+  	font-size: 15px;
+	font-weight: 300;
+  	color: #A9A9A9;
   	position: relative;
   	text-align: center;
   }
-  #links-text:visited{
-  	color: white;
-  } 
   #fact-text {
   	color: black;
   }
