--- a/assets/css/cs_style.css
+++ b/assets/css/cs_style.css
@@ -12,7 +12,7 @@ body, html {
 }
 .text {
 	position: absolute;
-	font-size: 30px;
+	font-size: 25px;
 	color: white;
 	font-weight: 500;
     top: 50%;
@@ -76,6 +76,9 @@ a {
   -o-background-size: cover;
   background-size: cover;*/
  }
+ #cs-intro-text {
+ 	font-size: 40px;
+ }
   #info-section {
    background-color: #D6B376;
   }
@@ -98,7 +101,7 @@ a {
   	position: relative;
   	text-align: center;
   }
-  #fact-text {
+  #exp-text {
   	color: black;
   }
  
