Added dance stuff

--- a/assets/css/cs_style.css
+++ b/assets/css/cs_style.css
@@ -91,7 +91,7 @@ a {
   }
   #contacts-section {
   	height: 200px;
-  	background-color: #white;
+  	background-color: #BECCD3;
   }
   #contacts-text {
   	top: 38%;
