Updated some stuff

--- a/assets/css/dance_style.css
+++ b/assets/css/dance_style.css
@@ -80,19 +80,19 @@ a {
  	font-size: 40px;
  }
  #info-section {
- 	background-color: #5FCFE0;
+ 	background-color: #6BEDBF;
  }
   #timeline-section-1 {
-   background-color: #D6B376;
+   background-color: #42A2BA;
   }
   #timeline-section-2 {
-  	background-color: #ED6F6E;
+  	background-color: #738387;
   }
   #timeline-section-3{
-  	background-color: #6FCEF7;
+  	background-color: #EFABA8;
   }
   #timeline-section-4 {
-  	background-color: #white;
+  	background-color: #BA426C;
   }
   #contacts-section {
   	height: 200px;
