trying to video bleh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ a {
   }
   #links-section {
   	height: 300px;
-  	background-color: #CCF767;
+  	background-color: #BECCD3;
   }
   #links-text {
   	top: 40%;
