--- a/assets/css/cs_style.css
+++ b/assets/css/cs_style.css
@@ -102,6 +102,14 @@ a {
   	text-align: center;
   }
   #exp-text {
-  	color: black;
+  	color: #BECCD3;
+  }
+  .title-exp-text {
+  	font-size: 30px;
+	font-weight: 600;
+  }
+  .title-intro-text {
+  	font-size: 50px;
+	font-weight: 700;
   }
  
