Changed Contact Text colors

--- a/assets/css/cs_style.css
+++ b/assets/css/cs_style.css
@@ -97,7 +97,7 @@ a {
   	top: 38%;
   	font-size: 15px;
 	font-weight: 300;
-  	color: #A9A9A9;
+  	color: #777777;
   	position: relative;
   	text-align: center;
   }
